update objectapi test data